webcomponent-webapi-sample/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webcomponent-webapi-sample
spec:
  type: ClusterIP
  selector:
    pod: webcomponent-webapi-sample-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
