webcomponent-webapi-sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webcomponent-webapi-sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /webcomponent-sample-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: webcomponent-webapi-sample
            port:
              name: webapi-s-port
